--- a/backend/Disease Prediction using Symptoms.ipynb
+++ b/backend/Disease Prediction using Symptoms.ipynb
@@ -77,6 +77,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "54fe67e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['abdominal_pain', 'abnormal_menstruation', 'acidity',\n",
+       "       'acute_liver_failure', 'altered_sensorium', 'anxiety', 'back_pain',\n",
+       "       'belly_pain', 'blackheads', 'bladder_discomfort',\n",
+       "       ...\n",
+       "       'watering_from_eyes', 'weakness_in_limbs', 'weakness_of_one_body_side',\n",
+       "       'weight_gain', 'weight_loss', 'yellow_crust_ooze', 'yellow_urine',\n",
+       "       'yellowing_of_eyes', 'yellowish_skin', 'prognosis'],\n",
+       "      dtype='object', length=135)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = df.columns\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "2d6645e1",
    "metadata": {},
@@ -158,25 +187,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "191cbb16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
-       "       17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,\n",
-       "       34, 35, 36, 37, 38, 39, 40, 41, 42])"
+       "43"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['prognosis'].unique()"
+    "(df['prognosis'].nunique())"
    ]
   },
   {
